Entity upgrades with new Spawn and Movement mechanics

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -166,10 +166,10 @@
     <ClCompile Include="BasicMesh.cpp" />
     <ClCompile Include="BoxRenderer.cpp" />
     <ClCompile Include="Camera.cpp" />
-    <ClCompile Include="CircularSpawn.cpp" />
     <ClCompile Include="Clock.cpp" />
-    <ClCompile Include="ConeSpawn.cpp" />
     <ClCompile Include="glfwWindow.cpp" />
+    <ClCompile Include="GLMesh.cpp" />
+    <ClCompile Include="GLRenderer.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="MeshGenerator.cpp" />
     <ClCompile Include="Movement.cpp" />
@@ -185,10 +185,10 @@
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Shapes.cpp" />
     <ClCompile Include="Shoot.cpp" />
+    <ClCompile Include="SingleParticle.cpp" />
     <ClCompile Include="SingleSpawn.cpp" />
     <ClCompile Include="Spawn.cpp" />
     <ClCompile Include="Sprite.cpp" />
-    <ClCompile Include="SpriteRenderer.cpp" />
     <ClCompile Include="StaticEntity.cpp" />
     <ClCompile Include="TextureGenerator.cpp" />
     <ClCompile Include="TextureManager.cpp" />
@@ -200,10 +200,10 @@
     <ClInclude Include="BasicMesh.h" />
     <ClInclude Include="BoxRenderer.h" />
     <ClInclude Include="Camera.h" />
-    <ClInclude Include="CircularSpawn.h" />
     <ClInclude Include="Clock.h" />
-    <ClInclude Include="ConeSpawn.h" />
     <ClInclude Include="glfwWindow.h" />
+    <ClInclude Include="GLMesh.h" />
+    <ClInclude Include="GLRenderer.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Shapes.h" />
     <ClInclude Include="MeshGenerator.h" />
@@ -218,10 +218,10 @@
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Shoot.h" />
+    <ClInclude Include="SingleParticle.h" />
     <ClInclude Include="SingleSpawn.h" />
     <ClInclude Include="Spawn.h" />
     <ClInclude Include="Sprite.h" />
-    <ClInclude Include="SpriteRenderer.h" />
     <ClInclude Include="StaticEntity.h" />
     <ClInclude Include="TextureGenerator.h" />
     <ClInclude Include="TextureManager.h" />
