--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -28,9 +28,6 @@
     <Filter Include="Source Files\Renderer">
       <UniqueIdentifier>{86fa0297-2c69-4a4d-9383-04f79796fd2b}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\Renderer">
-      <UniqueIdentifier>{eca16bc7-4839-49c3-b44c-71dadbcd077f}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source Files\Physics">
       <UniqueIdentifier>{e2c4fe3f-7a32-4217-af50-16937fbc820d}</UniqueIdentifier>
     </Filter>
@@ -49,9 +46,6 @@
     <Filter Include="Source Files\Behaviours">
       <UniqueIdentifier>{90336cd6-72ad-4ee2-aabc-0e73a3ff62e0}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\Behaviours\Spawn">
-      <UniqueIdentifier>{0a9eeac7-b707-43c6-abb3-a023e6e89c8f}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Header Files\Behaviours\Movement">
       <UniqueIdentifier>{98638cf5-6fd9-4f61-bb97-1cf2f2cb0a0b}</UniqueIdentifier>
     </Filter>
@@ -60,9 +54,6 @@
     </Filter>
     <Filter Include="Source Files\Behaviours\Movement">
       <UniqueIdentifier>{f10dd952-4400-4dbf-80a7-cbbc5a6f3651}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\Renderer\GLFW">
-      <UniqueIdentifier>{5c864914-2267-414b-a1f1-0536307d0512}</UniqueIdentifier>
     </Filter>
     <Filter Include="Source Files\Renderer\GLFW">
       <UniqueIdentifier>{07e6a62c-afaa-441a-8fdc-69d4c10d787c}</UniqueIdentifier>
@@ -76,14 +67,8 @@
     <Filter Include="Source Files\Behaviours\RenderingStrategy">
       <UniqueIdentifier>{c245bfda-74c0-4124-9236-6e3c039ad99e}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\Behaviours\RenderingStrategy">
-      <UniqueIdentifier>{b5338493-17dc-47af-adcb-6ff517fd8478}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source Files\Renderer\SDL">
       <UniqueIdentifier>{2c95ecf3-0daa-439b-baae-32d77e590015}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\Renderer\SDL">
-      <UniqueIdentifier>{3a683dde-ef31-4348-b6d3-ac881ad4c3d3}</UniqueIdentifier>
     </Filter>
     <Filter Include="Header Files\Clock">
       <UniqueIdentifier>{51d497c8-3c05-48fb-9a7c-7868571250be}</UniqueIdentifier>
@@ -94,14 +79,32 @@
     <Filter Include="Header Files\OpenGL\Handlers">
       <UniqueIdentifier>{70e28205-497b-43e3-a369-1b3b72340ec3}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\OpenGL\Mesh">
-      <UniqueIdentifier>{511cfa0a-69ac-46fc-bf9d-502ef76ffb0b}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Header Files\OpenGL\Texture">
       <UniqueIdentifier>{06cbfe8a-ea83-4784-8e1a-fd614aebc356}</UniqueIdentifier>
     </Filter>
     <Filter Include="Header Files\OpenGL\Shapes">
       <UniqueIdentifier>{e7bb8d27-1bce-4dfa-9b08-a2088d3a8c94}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Windows">
+      <UniqueIdentifier>{eca16bc7-4839-49c3-b44c-71dadbcd077f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Windows\GLFW">
+      <UniqueIdentifier>{5c864914-2267-414b-a1f1-0536307d0512}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Windows\SDL">
+      <UniqueIdentifier>{3a683dde-ef31-4348-b6d3-ac881ad4c3d3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Renderers">
+      <UniqueIdentifier>{b5338493-17dc-47af-adcb-6ff517fd8478}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Renderers\OpenGL">
+      <UniqueIdentifier>{b0967ca2-c1ac-4f3d-81ef-2f2a942b36e5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Behaviours\Spawn">
+      <UniqueIdentifier>{0a9eeac7-b707-43c6-abb3-a023e6e89c8f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Mesh">
+      <UniqueIdentifier>{511cfa0a-69ac-46fc-bf9d-502ef76ffb0b}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -153,9 +156,6 @@
     <ClCompile Include="TextureManager.cpp">
       <Filter>Source Files\OpenGL</Filter>
     </ClCompile>
-    <ClCompile Include="SpriteRenderer.cpp">
-      <Filter>Source Files\Behaviours\RenderingStrategy</Filter>
-    </ClCompile>
     <ClCompile Include="Window.cpp">
       <Filter>Source Files\Renderer</Filter>
     </ClCompile>
@@ -167,12 +167,6 @@
     </ClCompile>
     <ClCompile Include="Clock.cpp">
       <Filter>Source Files\Clock</Filter>
-    </ClCompile>
-    <ClCompile Include="CircularSpawn.cpp">
-      <Filter>Source Files\Behaviours\Spawn</Filter>
-    </ClCompile>
-    <ClCompile Include="ConeSpawn.cpp">
-      <Filter>Source Files\Behaviours\Spawn</Filter>
     </ClCompile>
     <ClCompile Include="GraphicsHandler.cpp">
       <Filter>Source Files\Renderer</Filter>
@@ -199,6 +193,15 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Shapes.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GLRenderer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GLMesh.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SingleParticle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -239,26 +242,17 @@
     <ClInclude Include="SingleSpawn.h">
       <Filter>Header Files\Behaviours\Spawn</Filter>
     </ClInclude>
-    <ClInclude Include="SpriteRenderer.h">
-      <Filter>Header Files\Behaviours\RenderingStrategy</Filter>
-    </ClInclude>
     <ClInclude Include="Window.h">
-      <Filter>Header Files\Renderer</Filter>
+      <Filter>Header Files\Windows</Filter>
     </ClInclude>
     <ClInclude Include="glfwWindow.h">
-      <Filter>Header Files\Renderer\GLFW</Filter>
+      <Filter>Header Files\Windows\GLFW</Filter>
     </ClInclude>
     <ClInclude Include="Clock.h">
       <Filter>Header Files\Clock</Filter>
     </ClInclude>
-    <ClInclude Include="CircularSpawn.h">
-      <Filter>Header Files\Behaviours\Spawn</Filter>
-    </ClInclude>
-    <ClInclude Include="ConeSpawn.h">
-      <Filter>Header Files\Behaviours\Spawn</Filter>
-    </ClInclude>
     <ClInclude Include="MeshGenerator.h">
-      <Filter>Header Files\OpenGL\Mesh</Filter>
+      <Filter>Header Files\Mesh</Filter>
     </ClInclude>
     <ClInclude Include="TextureGenerator.h">
       <Filter>Header Files\OpenGL\Texture</Filter>
@@ -276,31 +270,37 @@
       <Filter>Header Files\OpenGL\Handlers</Filter>
     </ClInclude>
     <ClInclude Include="Renderer.h">
-      <Filter>Header Files\Behaviours\RenderingStrategy</Filter>
+      <Filter>Header Files\Renderers</Filter>
     </ClInclude>
     <ClInclude Include="Camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="BoxRenderer.h">
-      <Filter>Header Files\Behaviours\RenderingStrategy</Filter>
+      <Filter>Header Files\Renderers</Filter>
     </ClInclude>
     <ClInclude Include="Shapes.h">
       <Filter>Header Files\OpenGL\Shapes</Filter>
     </ClInclude>
     <ClInclude Include="Mesh.h">
-      <Filter>Header Files\OpenGL\Mesh</Filter>
+      <Filter>Header Files\Mesh</Filter>
     </ClInclude>
     <ClInclude Include="BasicMesh.h">
-      <Filter>Header Files\OpenGL\Mesh</Filter>
+      <Filter>Header Files\Mesh</Filter>
     </ClInclude>
     <ClInclude Include="Sprite.h">
       <Filter>Header Files\OpenGL\Shapes</Filter>
     </ClInclude>
+    <ClInclude Include="GLRenderer.h">
+      <Filter>Header Files\Renderers\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="GLMesh.h">
+      <Filter>Header Files\Mesh</Filter>
+    </ClInclude>
+    <ClInclude Include="SingleParticle.h">
+      <Filter>Header Files\Particle</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="ClassDiagram.cd">
-      <Filter>Source Files</Filter>
-    </None>
     <None Include="minimal.frag">
       <Filter>Resource Files</Filter>
     </None>
@@ -308,6 +308,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="single.frag">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="ClassDiagram.cd">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
