--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -162,6 +162,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AbstractSpawner.cpp" />
     <ClCompile Include="BaseParticle.cpp" />
     <ClCompile Include="BasicMesh.cpp" />
     <ClCompile Include="BoxRenderer.cpp" />
@@ -173,6 +174,7 @@
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="MeshGenerator.cpp" />
     <ClCompile Include="Movement.cpp" />
+    <ClCompile Include="NullSpawner.cpp" />
     <ClCompile Include="openGLHandler.cpp" />
     <ClCompile Include="Particle.cpp" />
     <ClCompile Include="ParticleDecorator.cpp" />
@@ -188,6 +190,7 @@
     <ClCompile Include="BasicParticle.cpp" />
     <ClCompile Include="SingleSpawn.cpp" />
     <ClCompile Include="Spawn.cpp" />
+    <ClCompile Include="SpawnerDecorator.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="StaticEntity.cpp" />
     <ClCompile Include="TextureGenerator.cpp" />
@@ -196,6 +199,7 @@
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AbstractSpawner.h" />
     <ClInclude Include="BaseParticle.h" />
     <ClInclude Include="BasicMesh.h" />
     <ClInclude Include="BasicParticle.h" />
@@ -220,7 +224,8 @@
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Shoot.h" />
     <ClInclude Include="SingleSpawn.h" />
-    <ClInclude Include="Spawn.h" />
+    <ClInclude Include="NullSpawner.h" />
+    <ClInclude Include="SpawnerDecorator.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="StaticEntity.h" />
     <ClInclude Include="TextureGenerator.h" />
