--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -162,6 +162,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DelayedSpawn.cpp" />
     <ClCompile Include="EntitySpawnStrategy.cpp" />
     <ClCompile Include="Spawner.cpp" />
     <ClCompile Include="BaseParticle.cpp" />
@@ -198,6 +199,7 @@
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DelayedSpawn.h" />
     <ClInclude Include="EntitySpawnStrategy.h" />
     <ClInclude Include="Spawner.h" />
     <ClInclude Include="AbstractSpawnStrategy.h" />
