--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -182,6 +182,7 @@
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="GraphicsHandler.cpp" />
+    <ClCompile Include="ParticleFactory.cpp" />
     <ClCompile Include="Physics.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="SDLWindow.cpp" />
@@ -210,6 +211,7 @@
     <ClInclude Include="GLRenderer.h" />
     <ClInclude Include="InputHandler.h" />
     <ClInclude Include="Mesh.h" />
+    <ClInclude Include="ParticleFactory.h" />
     <ClInclude Include="SDLWindow.h" />
     <ClInclude Include="Shapes.h" />
     <ClInclude Include="MeshGenerator.h" />
