--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="DelayedSpawn.cpp" />
     <ClCompile Include="EntitySpawnStrategy.cpp" />
     <ClCompile Include="Firework.cpp" />
+    <ClCompile Include="FireworkDisplay.cpp" />
     <ClCompile Include="LifeTimeSpawn.cpp" />
     <ClCompile Include="ParticleManager.cpp" />
     <ClCompile Include="Spawner.cpp" />
@@ -209,6 +210,7 @@
     <ClInclude Include="DelayedSpawn.h" />
     <ClInclude Include="EntitySpawnStrategy.h" />
     <ClInclude Include="Firework.h" />
+    <ClInclude Include="FireworkDisplay.h" />
     <ClInclude Include="LifeTimeSpawn.h" />
     <ClInclude Include="ParticleManager.h" />
     <ClInclude Include="Spawner.h" />
